--- a/static-site/dashboard.html
+++ b/static-site/dashboard.html
@@ -1,112 +1,56 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - Study Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <style>
-        .dashboard-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px 0;
-        }
-        .stat-card {
-            background: white;
-            border-radius: 15px;
-            padding: 25px;
-            text-align: center;
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
-            transition: transform 0.3s ease;
-            margin-bottom: 20px;
-        }
-        .stat-card:hover {
-            transform: translateY(-5px);
-        }
-        .stat-icon {
-            font-size: 2.5rem;
-            margin-bottom: 15px;
-        }
-        .stat-number {
-            font-size: 2rem;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .quick-action-card {
-            background: linear-gradient(45deg, #28a745, #20c997);
-            color: white;
-            border-radius: 10px;
-            padding: 20px;
-            text-decoration: none;
-            display: block;
-            transition: all 0.3s ease;
-        }
-        .quick-action-card:hover {
-            transform: translateY(-3px);
-            color: white;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
-        .session-card {
-            border-left: 4px solid #007bff;
-            margin-bottom: 15px;
-            transition: all 0.3s ease;
-        }
-        .session-card:hover {
-            transform: translateX(5px);
-        }
-        .upcoming-session {
-            border-left-color: #28a745;
-        }
-        .recent-session {
-            border-left-color: #6c757d;
-        }
-        .group-card {
-            border-radius: 10px;
-            border: none;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            margin-bottom: 15px;
-        }
-        .progress-ring {
-            width: 60px;
-            height: 60px;
-        }
-    </style>
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="index.html">
                 <i class="fas fa-graduation-cap me-2"></i>Study Portal
             </a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/dashboard">Dashboard</a>
-                <a class="nav-link" href="/groups">Study Groups</a>
-                <a class="nav-link" href="/sessions">Sessions</a>
-                <div class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                        <i class="fas fa-user-circle"></i> <span th:text="${user.name}">User</span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/auth/profile">Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="/auth/logout">Logout</a></li>
-                    </ul>
-                </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="dashboard.html">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="schedules.html">Schedules</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="groups.html">Groups</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sessions.html">Sessions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Dashboard Header -->
     <div class="dashboard-header">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <h1>Welcome back, <span th:text="${user.name}">Student</span>!</h1>
-                    <p class="lead mb-0">Ready to achieve your study goals today?</p>
+                    <h1>Welcome to Study Portal!</h1>
+                    <p class="lead mb-0">Please login or register to access your personalized dashboard.</p>
                 </div>
                 <div class="col-md-4 text-end">
                     <div class="progress-ring">
-                        <i class="fas fa-chart-line" style="font-size: 3rem;"></i>
+                        <i class="fas fa-user-circle" style="font-size: 3rem; opacity: 0.7;"></i>
                     </div>
                 </div>
             </div>
@@ -114,14 +58,14 @@
     </div>
 
     <div class="container mt-4">
-        <!-- Statistics Cards -->
+        <!-- Default Statistics Cards (showing 0 values) -->
         <div class="row">
             <div class="col-md-3">
                 <div class="stat-card">
                     <div class="stat-icon text-primary">
                         <i class="fas fa-users"></i>
                     </div>
-                    <div class="stat-number" th:text="${totalGroups}">0</div>
+                    <div class="stat-number">0</div>
                     <div class="text-muted">Study Groups</div>
                 </div>
             </div>
@@ -130,7 +74,7 @@
                     <div class="stat-icon text-success">
                         <i class="fas fa-calendar-check"></i>
                     </div>
-                    <div class="stat-number" th:text="${#lists.size(upcomingSessions)}">0</div>
+                    <div class="stat-number">0</div>
                     <div class="text-muted">Upcoming Sessions</div>
                 </div>
             </div>
@@ -139,7 +83,7 @@
                     <div class="stat-icon text-info">
                         <i class="fas fa-clock"></i>
                     </div>
-                    <div class="stat-number" th:text="${#lists.size(recentSessions)}">0</div>
+                    <div class="stat-number">0</div>
                     <div class="text-muted">Recent Sessions</div>
                 </div>
             </div>
@@ -148,148 +92,93 @@
                     <div class="stat-icon text-warning">
                         <i class="fas fa-star"></i>
                     </div>
-                    <div class="stat-number" th:text="${user.gpa ?: 'N/A'}">0.0</div>
+                    <div class="stat-number">0.0</div>
                     <div class="text-muted">Current GPA</div>
                 </div>
             </div>
         </div>
 
-        <!-- Quick Actions -->
+        <!-- Login/Register Prompt -->
+        <div class="row mt-4">
+            <div class="col-12">
+                <div class="alert alert-info text-center">
+                    <h4><i class="fas fa-info-circle me-2"></i>Get Started</h4>
+                    <p class="mb-3">Create an account or login to access all features including study groups, session scheduling, and AI-powered recommendations.</p>
+                    <div class="d-flex justify-content-center gap-3">
+                        <a href="register.html" class="btn btn-primary btn-lg">
+                            <i class="fas fa-user-plus me-2"></i>Register
+                        </a>
+                        <a href="login.html" class="btn btn-outline-primary btn-lg">
+                            <i class="fas fa-sign-in-alt me-2"></i>Login
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Feature Overview -->
         <div class="row mt-4">
             <div class="col-md-12">
-                <h3><i class="fas fa-bolt me-2"></i>Quick Actions</h3>
+                <h3><i class="fas fa-star me-2"></i>Features Available After Login</h3>
             </div>
             <div class="col-md-3">
-                <a href="/groups/new" class="quick-action-card">
+                <div class="quick-action-card" style="pointer-events: none; opacity: 0.7;">
                     <i class="fas fa-plus-circle d-block mb-2" style="font-size: 2rem;"></i>
                     <h5>Create Study Group</h5>
                     <small>Start a new collaborative group</small>
-                </a>
+                </div>
             </div>
             <div class="col-md-3">
-                <a href="/sessions/new" class="quick-action-card" style="background: linear-gradient(45deg, #007bff, #6610f2);">
+                <div class="quick-action-card" style="background: linear-gradient(45deg, #007bff, #6610f2); pointer-events: none; opacity: 0.7;">
                     <i class="fas fa-calendar-plus d-block mb-2" style="font-size: 2rem;"></i>
                     <h5>Schedule Session</h5>
                     <small>Plan your next study session</small>
-                </a>
+                </div>
             </div>
             <div class="col-md-3">
-                <a href="/groups" class="quick-action-card" style="background: linear-gradient(45deg, #fd7e14, #dc3545);">
+                <div class="quick-action-card" style="background: linear-gradient(45deg, #fd7e14, #dc3545); pointer-events: none; opacity: 0.7;">
                     <i class="fas fa-search d-block mb-2" style="font-size: 2rem;"></i>
                     <h5>Find Groups</h5>
                     <small>Join existing study groups</small>
-                </a>
+                </div>
             </div>
             <div class="col-md-3">
-                <a href="/ai/recommendations" class="quick-action-card" style="background: linear-gradient(45deg, #6f42c1, #e83e8c);">
+                <div class="quick-action-card" style="background: linear-gradient(45deg, #6f42c1, #e83e8c); pointer-events: none; opacity: 0.7;">
                     <i class="fas fa-robot d-block mb-2" style="font-size: 2rem;"></i>
                     <h5>AI Recommendations</h5>
                     <small>Get personalized suggestions</small>
-                </a>
+                </div>
             </div>
         </div>
 
         <div class="row mt-4">
-            <!-- Upcoming Sessions -->
+            <!-- Empty Sessions Section -->
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
                         <h5><i class="fas fa-calendar-alt me-2"></i>Upcoming Sessions</h5>
                     </div>
                     <div class="card-body">
-                        <div th:if="${#lists.isEmpty(upcomingSessions)}" class="text-muted text-center py-3">
-                            <i class="fas fa-calendar-times fa-2x mb-2"></i>
-                            <p>No upcoming sessions scheduled</p>
-                            <a href="/sessions/new" class="btn btn-primary btn-sm">Schedule Now</a>
-                        </div>
-                        <div th:each="session : ${upcomingSessions}" class="card session-card upcoming-session">
-                            <div class="card-body py-3">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <h6 class="card-title mb-1" th:text="${session.title}">Session Title</h6>
-                                        <small class="text-muted">
-                                            <i class="fas fa-users me-1"></i>
-                                            <span th:text="${session.studyGroup.name}">Group Name</span>
-                                        </small>
-                                        <br>
-                                        <small class="text-muted">
-                                            <i class="fas fa-clock me-1"></i>
-                                            <span th:text="${#temporals.format(session.scheduledTime, 'MMM dd, HH:mm')}">Date & Time</span>
-                                        </small>
-                                    </div>
-                                    <a th:href="@{'/sessions/' + ${session.id}}" class="btn btn-outline-primary btn-sm">
-                                        <i class="fas fa-eye"></i>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="text-muted text-center py-4">
+                            <i class="fas fa-calendar-times fa-3x mb-3"></i>
+                            <h6>No upcoming sessions</h6>
+                            <p class="small">Login to create and join study sessions</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- My Study Groups -->
+            <!-- Empty Groups Section -->
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header">
                         <h5><i class="fas fa-users me-2"></i>My Study Groups</h5>
                     </div>
                     <div class="card-body">
-                        <div th:if="${#lists.isEmpty(userGroups)}" class="text-muted text-center py-3">
-                            <i class="fas fa-user-friends fa-2x mb-2"></i>
-                            <p>You haven't joined any study groups yet</p>
-                            <a href="/groups" class="btn btn-primary btn-sm">Find Groups</a>
-                        </div>
-                        <div th:each="group : ${userGroups}" class="card group-card">
-                            <div class="card-body py-3">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <div>
-                                        <h6 class="card-title mb-1" th:text="${group.name}">Group Name</h6>
-                                        <small class="text-muted">
-                                            <i class="fas fa-book me-1"></i>
-                                            <span th:text="${group.subject}">Subject</span>
-                                        </small>
-                                        <br>
-                                        <small class="text-muted">
-                                            <i class="fas fa-users me-1"></i>
-                                            <span th:text="${#lists.size(group.members)} + ' members'">Members</span>
-                                        </small>
-                                    </div>
-                                    <a th:href="@{'/groups/' + ${group.id}}" class="btn btn-outline-success btn-sm">
-                                        <i class="fas fa-arrow-right"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Recommended Groups -->
-        <div class="row mt-4" th:if="${!#lists.isEmpty(recommendedGroups)}">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h5><i class="fas fa-lightbulb me-2"></i>Recommended for You</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div th:each="group : ${recommendedGroups}" class="col-md-4 mb-3">
-                                <div class="card group-card border-success">
-                                    <div class="card-body text-center">
-                                        <h6 class="card-title" th:text="${group.name}">Group Name</h6>
-                                        <p class="card-text text-muted" th:text="${group.subject}">Subject</p>
-                                        <small class="text-muted">
-                                            <i class="fas fa-users me-1"></i>
-                                            <span th:text="${#lists.size(group.members)} + ' members'">Members</span>
-                                        </small>
-                                        <br>
-                                        <a th:href="@{'/groups/' + ${group.id}}" class="btn btn-success btn-sm mt-2">
-                                            <i class="fas fa-plus me-1"></i>Join Group
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="text-muted text-center py-4">
+                            <i class="fas fa-users-slash fa-3x mb-3"></i>
+                            <h6>No study groups joined</h6>
+                            <p class="small">Login to create or join study groups</p>
                         </div>
                     </div>
                 </div>
@@ -297,6 +186,14 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p>&copy; 2025 Study Schedule Portal. All rights reserved.</p>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
