--- a/static-site/schedules.html
+++ b/static-site/schedules.html
@@ -3,229 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Schedules - অধ্যয়ন সঙ্ঘ</title>
+    <title>Study Schedules - Study Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand bengali-title" href="index.html">
-                <i class="fas fa-graduation-cap me-2"></i>
-                অধ্যয়ন সঙ্ঘ
+            <a class="navbar-brand" href="index.html">
+                <i class="fas fa-graduation-cap me-2"></i>Study Portal
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">
-                            <i class="fas fa-home me-1"></i>Home
-                        </a>
+                        <a class="nav-link" href="dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="schedules.html">
-                            <i class="fas fa-calendar-alt me-1"></i>My Schedule
-                        </a>
+                        <a class="nav-link active" href="schedules.html">Schedules</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="groups.html">
-                            <i class="fas fa-users me-1"></i>Study Groups
-                        </a>
+                        <a class="nav-link" href="groups.html">Groups</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sessions.html">
-                            <i class="fas fa-clock me-1"></i>Sessions
-                        </a>
+                        <a class="nav-link" href="sessions.html">Sessions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ai-dashboard.html">
-                            <i class="fas fa-robot me-1"></i>AI Assistant
-                        </a>
+                        <a class="nav-link" href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Header -->
+    <div class="hero-section">
+        <div class="container">
+            <h1><i class="fas fa-calendar me-3"></i>Study Schedules</h1>
+            <p class="lead">Plan and organize your study time effectively</p>
+        </div>
+    </div>
+
     <div class="container mt-4">
-        <!-- Page Header -->
+        <!-- Login Required Alert -->
+        <div class="alert alert-warning text-center">
+            <h5><i class="fas fa-lock me-2"></i>Login Required</h5>
+            <p class="mb-3">Please login or register to create and manage your study schedules.</p>
+            <div class="d-flex justify-content-center gap-3">
+                <a href="register.html" class="btn btn-primary">
+                    <i class="fas fa-user-plus me-2"></i>Register
+                </a>
+                <a href="login.html" class="btn btn-outline-primary">
+                    <i class="fas fa-sign-in-alt me-2"></i>Login
+                </a>
+            </div>
+        </div>
+
+        <!-- Statistics Cards with 0 values -->
         <div class="row mb-4">
-            <div class="col-12">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div>
-                        <h1><i class="fas fa-calendar-alt me-2"></i>My Study Schedules</h1>
-                        <p class="text-muted">Manage your study sessions and track your progress</p>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon text-primary">
+                        <i class="fas fa-calendar-alt"></i>
                     </div>
-                    <a href="create-schedule.html" class="btn btn-primary">
-                        <i class="fas fa-plus me-2"></i>Create New Schedule
-                    </a>
+                    <div class="stat-number">0</div>
+                    <div class="text-muted">Total Schedules</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon text-success">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                    <div class="stat-number">0</div>
+                    <div class="text-muted">Completed</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon text-warning">
+                        <i class="fas fa-clock"></i>
+                    </div>
+                    <div class="stat-number">0</div>
+                    <div class="text-muted">Pending</div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="stat-card">
+                    <div class="stat-icon text-info">
+                        <i class="fas fa-hourglass-half"></i>
+                    </div>
+                    <div class="stat-number">0h</div>
+                    <div class="text-muted">Weekly Hours</div>
                 </div>
             </div>
         </div>
 
-        <!-- Quick Stats -->
-        <div class="row mb-4">
-            <div class="col-md-3 mb-3">
-                <div class="card text-center bg-primary text-white">
-                    <div class="card-body">
-                        <i class="fas fa-calendar-check fa-2x mb-2"></i>
-                        <h4 id="total-schedules">0</h4>
-                        <p class="mb-0">Total Schedules</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-3">
-                <div class="card text-center bg-success text-white">
-                    <div class="card-body">
-                        <i class="fas fa-check-circle fa-2x mb-2"></i>
-                        <h4 id="completed-schedules">0</h4>
-                        <p class="mb-0">Completed</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-3">
-                <div class="card text-center bg-warning text-white">
-                    <div class="card-body">
-                        <i class="fas fa-clock fa-2x mb-2"></i>
-                        <h4 id="pending-schedules">0</h4>
-                        <p class="mb-0">Pending</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3 mb-3">
-                <div class="card text-center bg-info text-white">
-                    <div class="card-body">
-                        <i class="fas fa-hourglass-half fa-2x mb-2"></i>
-                        <h4 id="total-hours">0h</h4>
-                        <p class="mb-0">Total Hours</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Filter Options -->
-        <div class="row mb-4">
+        <!-- Empty State -->
+        <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-body">
-                        <h5><i class="fas fa-filter me-2"></i>Filter Schedules</h5>
-                        <div class="row">
-                            <div class="col-md-3">
-                                <select class="form-select" id="filter-subject">
-                                    <option value="">All Subjects</option>
-                                    <option value="Mathematics">Mathematics</option>
-                                    <option value="Physics">Physics</option>
-                                    <option value="Programming">Programming</option>
-                                    <option value="Chemistry">Chemistry</option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <select class="form-select" id="filter-priority">
-                                    <option value="">All Priorities</option>
-                                    <option value="high">High</option>
-                                    <option value="medium">Medium</option>
-                                    <option value="low">Low</option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <select class="form-select" id="filter-status">
-                                    <option value="">All Status</option>
-                                    <option value="pending">Pending</option>
-                                    <option value="completed">Completed</option>
-                                </select>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-outline-secondary w-100" onclick="clearFilters()">
-                                    <i class="fas fa-times me-2"></i>Clear Filters
-                                </button>
-                            </div>
+                    <div class="card-body text-center py-5">
+                        <i class="fas fa-calendar-times fa-4x text-muted mb-4"></i>
+                        <h4 class="text-muted">No Study Schedules Created</h4>
+                        <p class="text-muted mb-4">Login to create personalized study schedules and track your progress.</p>
+                        <div class="d-flex justify-content-center gap-3">
+                            <a href="login.html" class="btn btn-primary">
+                                <i class="fas fa-sign-in-alt me-2"></i>Login to Continue
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Schedules Grid -->
-        <div class="row" id="schedules-container">
-            <!-- Schedules will be loaded here -->
-        </div>
-
-        <!-- Empty State -->
-        <div class="row" id="empty-state" style="display: none;">
-            <div class="col-12 text-center py-5">
-                <i class="fas fa-calendar-plus fa-5x text-muted mb-3"></i>
-                <h3>No Schedules Found</h3>
-                <p class="text-muted mb-4">You haven't created any study schedules yet. Start planning your study sessions!</p>
-                <a href="create-schedule.html" class="btn btn-primary btn-lg">
-                    <i class="fas fa-plus me-2"></i>Create Your First Schedule
-                </a>
+        <!-- Features Preview -->
+        <div class="row mt-5">
+            <div class="col-md-12">
+                <h3 class="text-center mb-4">Schedule Management Features</h3>
+            </div>
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fas fa-plus-square fa-3x text-primary mb-3"></i>
+                    <h5>Create Schedules</h5>
+                    <p class="text-muted">Build personalized study plans for your subjects</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fas fa-robot fa-3x text-success mb-3"></i>
+                    <h5>AI Optimization</h5>
+                    <p class="text-muted">Get AI-powered schedule recommendations</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="text-center">
+                    <i class="fas fa-chart-bar fa-3x text-info mb-3"></i>
+                    <h5>Progress Tracking</h5>
+                    <p class="text-muted">Monitor your study goals and achievements</p>
+                </div>
             </div>
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3 mt-5">
+        <div class="container">
+            <p>&copy; 2025 Study Schedule Portal. All rights reserved.</p>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
-    <script>
-        // Page-specific functionality
-        function renderSchedules() {
-            const schedules = StudyPortal.loadSchedules();
-            const container = document.getElementById('schedules-container');
-            const emptyState = document.getElementById('empty-state');
-
-            // Apply filters
-            const subjectFilter = document.getElementById('filter-subject').value;
-            const priorityFilter = document.getElementById('filter-priority').value;
-            const statusFilter = document.getElementById('filter-status').value;
-
-            let filteredSchedules = schedules.filter(schedule => {
-                return (!subjectFilter || schedule.subject === subjectFilter) &&
-                       (!priorityFilter || schedule.priority === priorityFilter) &&
-                       (!statusFilter || schedule.status === statusFilter);
-            });
-
-            if (filteredSchedules.length === 0) {
-                container.innerHTML = '';
-                emptyState.style.display = 'block';
-            } else {
-                emptyState.style.display = 'none';
-                container.innerHTML = filteredSchedules.map(StudyPortal.createScheduleCard).join('');
-            }
-
-            updateStats(schedules);
-        }
-
-        function updateStats(schedules) {
-            const totalSchedules = schedules.length;
-            const completedSchedules = schedules.filter(s => s.status === 'completed').length;
-            const pendingSchedules = schedules.filter(s => s.status === 'pending').length;
-            const totalHours = Math.floor(schedules.reduce((total, s) => total + s.duration, 0) / 60);
-
-            document.getElementById('total-schedules').textContent = totalSchedules;
-            document.getElementById('completed-schedules').textContent = completedSchedules;
-            document.getElementById('pending-schedules').textContent = pendingSchedules;
-            document.getElementById('total-hours').textContent = totalHours + 'h';
-        }
-
-        function clearFilters() {
-            document.getElementById('filter-subject').value = '';
-            document.getElementById('filter-priority').value = '';
-            document.getElementById('filter-status').value = '';
-            renderSchedules();
-        }
-
-        // Add event listeners for filters
-        document.addEventListener('DOMContentLoaded', function() {
-            renderSchedules();
-
-            ['filter-subject', 'filter-priority', 'filter-status'].forEach(id => {
-                document.getElementById(id).addEventListener('change', renderSchedules);
-            });
-        });
-    </script>
 </body>
 </html>
