--- a/static-site/login.html
+++ b/static-site/login.html
@@ -69,7 +69,7 @@
                         <div id="alertContainer"></div>
 
                         <!-- Login Form -->
-                        <form id="loginForm">
+                        <form id="loginForm" onsubmit="return false;">
                             <div class="form-floating">
                                 <input type="email" class="form-control" id="email" name="email"
                                        placeholder="Email Address" required>
