--- a/static-site/register.html
+++ b/static-site/register.html
@@ -74,7 +74,7 @@
                         <div id="alertContainer"></div>
 
                         <!-- Registration Form -->
-                        <form id="registrationForm">
+                        <form id="registrationForm" onsubmit="return false;">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-floating">
